--- a/index.html
+++ b/index.html
@@ -20,93 +20,6 @@
 
 </head>
 <body>
-    <div class="container">
-        <h1>MVP3245版本号</h1>
-        <form id="form01" class="form-horizontal">
-            <div class="form-group">
-                <label for="version_x86" class="col-md-3 control-label text-right">VERSION_X86：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="version_x86">
-                </div>
-                <span id="version_x86_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="version_x64" class="col-md-3 control-label">VERSION_X64：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="version_x64">
-                </div>
-                <span id="version_x64_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="dll_x86" class="col-md-3 control-label">DLL_X86：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="dll_x86">
-                </div>
-                <span id="dll_x86_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="dll_x64" class="col-md-3 control-label">DLL_X64：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="dll_x64">
-                </div>
-                <span id="dll_x64_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="sys_x86" class="col-md-3 control-label">SYS_X86：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="sys_x86">
-                </div>
-                <span id="sys_x86_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="sys_x64" class="col-md-3 control-label">SYS_X64：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="sys_x64">
-                </div>
-                <span id="sys_x64_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group">
-                <label for="firmware" class="col-md-3 control-label">FIRMWARE：</label>
-                <div class="col-md-6">
-                    <input type="text" class="form-control col-md-6" id="firmware">
-                </div>
-                <span id="firmware_note" class="col-md-3 text-left"></span>
-            </div>
-            <div class="form-group control-group">
-                <label for="date" class="col-md-3 control-label">DATE：</label>
-                <div class="controls input-append date col-md-6 date form_date" data-date="12-02-2012" data-date-format="yyyy-mm-dd">
-                    <input class="span2" size="16" type="text" value="" id="date" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-                    <span class="add-on"><i class="icon-th"></i></span>
-                </div>
-                <span id="date_note" class="col-md-3 text-left"></span>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <button type="button" class="btn btn-success" id="sure">提交版本</button>
-                </div>
-                <span id="ci_note" class="col-md-3 text-left"></span>
-            </div>
-
-        </form>
-    </div>
-
-
-
-    <script type="text/javascript">
-        $("#date").datetimepicker({
-            format:"yyyy-mm-dd",
-            weekStart: 1,
-            todayBtn:  1,
-            autoclose: 1,
-            todayHighlight: 1,
-            startView: 2,
-            minView: 2,
-            forceParse: 0
-        });
-    </script>
-
-
+	zaixianclock.com
 </body>
 </html>
